@@ -1,46 +1,56 @@
 package school.faang.bjs2_88167;
 
-import java.util.ArrayList;
 import java.util.Comparator;
+import java.util.EnumMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.function.Function;
+import java.util.regex.MatchResult;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 import java.time.LocalDate;
-import java.util.regex.Matcher;
+import java.util.stream.Stream;
 
 public class UserActionAnalyzer {
+    private static final Pattern HASHTAG_PATTERN = Pattern.compile("#\\w+");
+    private static final Pattern HASHTAG_CLEANUP_PATTERN = Pattern.compile("[^a-zA-Z0-9_#]");
 
     public static List<String> topActiveUsers(List<UserAction> actions, int n) {
-        return actions.stream()
-                .collect(Collectors.groupingBy(UserAction::getUserName, Collectors.counting()))
-                .entrySet().stream()
-                .sorted(Map.Entry.<String, Long>comparingByValue(Comparator.reverseOrder()))
+        Map<String, Long> counts = actions.stream()
+                .collect(Collectors.groupingBy(UserAction::getUserName, Collectors.counting()));
+
+        Set<Map.Entry<String, Long>> entries = counts.entrySet();
+
+        Stream<Map.Entry<String, Long>> sortedStream = entries.stream()
+                .sorted(Map.Entry.<String, Long>comparingByValue(Comparator.reverseOrder()));
+
+        List<String> topUsers = sortedStream
                 .limit(n)
                 .map(Map.Entry::getKey)
                 .collect(Collectors.toList());
+
+        return topUsers;
     }
 
     public static List<String> topPopularHashtags(List<UserAction> actions, int n) {
-        Pattern hashtagPattern = Pattern.compile("#\\w+");
-
-        return actions.stream()
+        Stream<String> hashtagStream = actions.stream()
                 .filter(a -> a.getActionType() == ActionType.POST || a.getActionType() == ActionType.COMMENT)
-                .flatMap(a -> {
-                    Matcher matcher = hashtagPattern.matcher(a.getContent());
-                    List<String> tags = new ArrayList<>();
-                    while (matcher.find()) {
-                        tags.add(matcher.group().toLowerCase());
-                    }
-                    return tags.stream();
-                })
-                .collect(Collectors.groupingBy(Function.identity(), Collectors.counting()))
-                .entrySet().stream()
+                .map(UserAction::getContent)
+                .flatMap(content -> HASHTAG_PATTERN
+                        .matcher(content)
+                        .results()
+                        .map(MatchResult::group)
+                        .map(hashtag -> HASHTAG_CLEANUP_PATTERN.matcher(hashtag).replaceAll("")));
+
+        Map<String, Long> counts = hashtagStream.collect(Collectors.groupingBy(
+                Function.identity(), Collectors.counting()));
+
+        return counts.entrySet().stream()
                 .sorted(Map.Entry.<String, Long>comparingByValue(Comparator.reverseOrder()))
                 .limit(n)
                 .map(Map.Entry::getKey)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<String> topCommentersLastMonth(List<UserAction> actions, int n) {
@@ -49,7 +59,10 @@ public class UserActionAnalyzer {
 
         return actions.stream()
                 .filter(action -> action.getActionType() == ActionType.COMMENT)
-                .filter(action -> !action.getActionDate().isBefore(oneMonthAgo) && !action.getActionDate().isAfter(now))
+                .filter(action -> {
+                    LocalDate date = action.getActionDate();
+                    return !date.isBefore(oneMonthAgo) && !date.isAfter(now);
+                })
                 .collect(Collectors.groupingBy(UserAction::getUserName, Collectors.counting()))
                 .entrySet().stream()
                 .sorted(Map.Entry.<String, Long>comparingByValue(Comparator.reverseOrder()))
@@ -61,16 +74,20 @@ public class UserActionAnalyzer {
     public static Map<ActionType, Double> actionTypePercentages(List<UserAction> actions) {
         long total = actions.size();
 
-        Map<ActionType, Double> result = actions.stream()
-                .collect(Collectors.groupingBy(UserAction::getActionType, Collectors.counting()))
-                .entrySet().stream()
-                .collect(Collectors.toMap(
-                        Map.Entry::getKey,
-                        e -> e.getValue() * 100.0 / total
-                ));
+        Map<ActionType, Long> counts = actions.stream()
+                        .collect(Collectors.groupingBy(UserAction::getActionType, Collectors.counting()));
+
+        Map<ActionType, Double> result = new EnumMap<>(ActionType.class);
+
+        counts.forEach((key, value) -> {
+            double percentage = value * 100.0 / total;
+            result.put(key, percentage);
+        });
+
         for (ActionType type : ActionType.values()) {
             result.putIfAbsent(type, 0.0);
         }
+
         return result;
     }
 }
